--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Big Panda Feed</title>
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
 
@@ -30,7 +30,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
 <script src="node_modules/angular-md5/angular-md5.min.js"></script>
-<script src="app.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 </html>
